<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/info"
        android:enabled="true"
        android:icon="@drawable/ic_selector_info"
        android:title="@string/info" />
    <item
        android:id="@+id/code"
        android:enabled="true"
        android:icon="@drawable/ic_selector_code"
        android:title="@string/code" />
    <item
        android:id="@+id/vote"
        android:enabled="true"
        android:icon="@drawable/ic_selector_vote"
        android:title="@string/vote" />
    <item
        android:id="@+id/log"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_log"
        android:title="@string/log" />
    <item
        android:id="@+id/comment"
        android:enabled="true"
        android:icon="@drawable/ic_selector_comment"
        android:title="@string/comment" />
</menu>