<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".UI.Change.ChangeInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp">

            <TextView
                android:id="@+id/editTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/hideFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ownerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/owner"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/moreOwner"
                    android:layout_toEndOf="@+id/ownerText"
                    android:gravity="end">

                    <include
                        android:id="@+id/chipOwner"
                        layout="@layout/change_info_chip" />

                </LinearLayout>

                <include
                    android:id="@+id/moreOwner"
                    layout="@layout/change_info_more_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/reviewerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/reviewerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/reviewer"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/moreReviewer"
                    android:layout_toEndOf="@+id/reviewerText"
                    android:gravity="end">

                    <include
                        android:id="@+id/chipReviewer"
                        layout="@layout/change_info_chip" />

                </LinearLayout>

                <include
                    android:id="@+id/moreReviewer"
                    layout="@layout/change_info_more_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/CCLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/CCText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/cc"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/moreCC"
                    android:layout_toEndOf="@+id/CCText"
                    android:gravity="end">

                    <include
                        android:id="@+id/chipCC"
                        layout="@layout/change_info_chip" />

                </LinearLayout>

                <include
                    android:id="@+id/moreCC"
                    layout="@layout/change_info_more_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/projectText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/project"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/moreProject"
                    android:layout_toEndOf="@+id/projectText"
                    android:gravity="end">

                    <include
                        android:id="@+id/chipProject"
                        layout="@layout/change_info_chip" />

                </LinearLayout>

                <include
                    android:id="@+id/moreProject"
                    layout="@layout/change_info_more_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/branchText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/branch"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/moreBranch"
                    android:layout_toEndOf="@+id/branchText"
                    android:gravity="end">

                    <include
                        android:id="@+id/chipBranch"
                        layout="@layout/change_info_chip" />

                </LinearLayout>

                <include
                    android:id="@+id/moreBranch"
                    layout="@layout/change_info_more_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/topicLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/topicText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/topic"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/moreTopic"
                    android:layout_toEndOf="@+id/topicText"
                    android:gravity="end">

                    <include
                        android:id="@+id/chipTopic"
                        layout="@layout/change_info_chip" />

                </LinearLayout>

                <include
                    android:id="@+id/moreTopic"
                    layout="@layout/change_info_more_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true" />

            </RelativeLayout>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/ic_change_description_background"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>